# hexo-circle-of-friends

./: .env  .gitignore  .vercelignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  _config.yml  css_rules.yaml  data.db  data.json  deploy.py  docker.sh  dockerbuild.sh  dump_settings.yaml  fc_settings.yaml  pyproject.toml  requirements.txt  run.py  scrapy.cfg  server.sh  settings.py  start.sh  stop.sh  test_api_consistency.py  update_version.py  userinfo.txt  vercel.json
.github/ISSUE_TEMPLATE/: feature-request.md  newfeature.yaml  报告bug.md  报告bug.yaml
.github/workflows/: CI.yml  autoWakeup.yml  fcircle.yml  main.yml  update-friends-posts.yml
api/: Cargo.toml  dependencies.py  items.py  leancloudapi.py  main.py  mongodbapi.py  requirements.txt  sqlapi.py  swagger.json  vercel.json  vercel.py
api/sql/: db_interface.py  security.py  sqlapi.py
api/src/: lib.rs  main.rs  tests.rs
api/test/: auth.py  items.py  post.py  pwd.py
api/utils/: github_upload.py  split_text.py
api_dependence/: Cargo.toml
api_dependence/mongodb/: db_interface.py  mongodbapi.py
api_dependence/sql/: db_interface.py  sqlapi.py
api_dependence/src/: format_response.rs  lib.rs
api_dependence/src/mongodb/: mod.rs  mongodbapi.rs
api_dependence/src/mysql/: mod.rs  mysqlapi.rs
api_dependence/src/sqlite/: mod.rs  sqliteapi.rs
api_dependencies/: dependencies.py  format_response.py  items.py  tools.py
api_dependencies/leancloud/: db_interface.py  leancloudapi.py  security.py
api_dependencies/mongodb/: db_interface.py  mongodbapi.py  security.py
api_dependencies/sql/: db_interface.py  security.py  sqlapi.py
api_dependencies/test/: pwd.py
api_dependencies/utils/: __init__.py  github_interface.py  github_upload.py  validate_params.py  vercel_upload.py
component/: getThread.py  getTime.py  getWeb.py  ohter.py
core/: Cargo.toml
core/src/: main.rs
data_structures/: Cargo.toml
data_structures/src/: config_tests.rs  lib.rs
db/: Cargo.toml  models.py
db/schema/mysql/: 01_mysql.sql
db/schema/sqlite/: 01_sqlite.sql
db/src/: lib.rs  mongo.rs  mysql.rs  sqlite.rs
docs/: README.md  _sidebar.md  backenddeploy.md  deploy.md  frontenddeploy.md  index.html  preview.md  settings.md
downloader/: Cargo.toml
downloader/src/: crawler.rs  download.rs  lib.rs
downloader/src/genai/: bigmodel.rs  enhanced_provider.rs  gemini.rs  mod.rs  siliconflow.rs
handlers/: coreDatas.py  coreLink.py  coreRequest.py  coreSettings.py  example.py
hexo_circle_of_friends/: fc_settings.yaml  items.py  middlewares.py  models.py  pipelines.py  requirement.txt  requirements.txt  run.py  scrapy_conf.py  settings.py
hexo_circle_of_friends/pipelines/: leancloud_pipe.py  mongodb_pipe.py  pipelines.py  sql_pipe.py
hexo_circle_of_friends/spiders/: hexo_circle_of_friends.py  test.py  xml.py
hexo_circle_of_friends/test/: conf_test.py  env_test.py  prompt_toolkit.py  version_check.py
hexo_circle_of_friends/utils/: baselogger.py  check_time.py  get_theme_url.py  get_url.py  initsettings.py  logger.py  process_time.py  project.py  regulations.py  simple_mode_transform_json.py
history/: run1.py  run2.py
history/request_data/: middleware.py  request.py  requestOld.py
request_data/: request.py  requestOld.py
tests/: test_api.json  test_sites.yaml
theme/: butterfly.py  fluid.py  matery.py  sakura.py  volantis.py
theme/butterfly/: butterfly.py
theme/matery/: matery.py
theme/volantis/: volantis.py
tmptest/: Cargo.toml
tmptest/src/: main.rs
tools/: Cargo.toml  utils.py
tools/src/: config_test.rs  html_extractor.rs  lib.rs
