[package]
name = "core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_structures = { path = "../data_structures" }
tools = { path = "../tools" }
downloader = { path = "../downloader" }
db = { path = "../db" }
tokio.workspace = true
chrono.workspace = true
sqlx.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tracing.workspace = true

[[bin]]
name = "fcircle_core"
path = "src/main.rs"