[package]
name = "data_structures"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
