[package]
name = "db"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx.workspace = true
data_structures = { path = "../data_structures" }
mongodb = "3"
tokio.workspace = true
futures = "0.3"
chrono.workspace=true