[package]
name = "db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
data_structures = { path = "../data_structures" }
mongodb = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }