[package]
name = "tmptest"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
tracing.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tools = { path = "../tools" }
db = { path = "../db" }
data_structures = { path = "../data_structures" }

