[package]
name = "tools"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_structures = { path = "../data_structures" }
serde_yaml.workspace = true
chrono.workspace = true
dotenvy.workspace = true

tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
logroller.workspace = true