[package]
name = "tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_structures = { path = "../data_structures" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }

tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
logroller = { workspace = true }
